k8s/apps/grafana/extensions-v1beta1.Ingress-grafana.yaml
# yaml-language-server: $schema=../../../schemas/k8s-v1.19.12/ingress-extensions-v1beta1.json
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: grafana
  namespace: default
spec:
  rules:
  - host: grafana.home
    http:
      paths:
      - backend:
          serviceName: grafana
          servicePort: grafana-http
